--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Rest Countries API using HTML, CSS & JavaScript</title>
     <!-- link css file here -->
     <link rel="stylesheet" href="styles.css">
+    <script src="js/restapi.js" defer></script>
 </head>
 <body>
     <h1>Rest Countries API using HTML, CSS & JavaScript</h1>
@@ -16,6 +17,6 @@
     </div>
 
     <!-- link script tags here -->
-    <script src="js/restapi.js"></script>
+    
 </body>
 </html>
